[gd_scene load_steps=7 format=3 uid="uid://dlgfvphwp34oa"]

[ext_resource type="Script" path="res://Assets/Scripts/cartaPreviewScript.gd" id="1_kfrq3"]
[ext_resource type="Texture2D" uid="uid://cr0e56ely2b44" path="res://Assets/Textures/card_base4.png" id="2_mwbwr"]
[ext_resource type="FontFile" uid="uid://sk7x8hxeqldj" path="res://Assets/Fonts/CelticTime.ttf" id="3_pw7e8"]
[ext_resource type="Texture2D" uid="uid://cg3fht175be5f" path="res://Assets/Textures/card_base.png" id="3_xp0uh"]
[ext_resource type="Theme" uid="uid://dvsojcmw5svs1" path="res://Assets/Themes/label_ingame.tres" id="4_cv86a"]

[sub_resource type="LabelSettings" id="LabelSettings_yeogr"]
font = ExtResource("3_pw7e8")
font_size = 32

[node name="CartaUI" type="Control"]
custom_minimum_size = Vector2(132, 185)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1788.0
offset_bottom = -895.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(66, 92.5)
script = ExtResource("1_kfrq3")

[node name="card_base" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_mwbwr")
expand_mode = 1
stretch_mode = 5

[node name="on_hand_tex" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_xp0uh")
expand_mode = 1
stretch_mode = 5

[node name="Nombre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -106.0
offset_right = 84.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_cv86a")
theme_override_font_sizes/font_size = 30
text = "pipo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Descripcion" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -59.0
offset_right = 68.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_cv86a")
theme_override_font_sizes/font_size = 12
text = "Hago esto jeje"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Coste" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_right = -11.0
offset_bottom = 37.0
grow_horizontal = 0
theme = ExtResource("4_cv86a")
theme_override_font_sizes/font_size = 20
text = "74"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coste_Antorchas" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 35.0
grow_horizontal = 0
alignment = 2

[node name="Cantidad" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -12.5
offset_right = 30.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "74"
label_settings = SubResource("LabelSettings_yeogr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_derecha" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -33.0
offset_right = 8.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_cv86a")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vida" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -30.0
offset_right = 47.0
offset_bottom = 1.0
grow_vertical = 0
theme = ExtResource("4_cv86a")
theme_override_colors/font_color = Color(0.239216, 0.831373, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Tipo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(25, 26)
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 32.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
